tests/ui/async-await/async-drop/ex-ice1.stderr
error[E0423]: cannot find function `async_drop` in module `core::future`
  --> $DIR/ex-ice1.rs:9:49
   |
LL | ...   let async_drop_fut = pin!(core::future::async_drop(async {}));
   |                                               ^^^^^^^^^^ not found in `core::future`
   |
   = note: a module named `core::future::async_drop` exists in another namespace

error[E0603]: module `async_drop` is private
  --> $DIR/ex-ice1.rs:9:49
   |
LL | ...   let async_drop_fut = pin!(core::future::async_drop(async {}));
   |                                               ^^^^^^^^^^ private module
   |
note: the module `async_drop` is defined here
  --> $SRC_DIR/core/src/future/mod.rs:LL:COL

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0603.
For more information about an error, try `rustc --explain E0423`.
